--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,37 @@
 .card {
-  background-color: #ffe5d9;
+  background-color: #F2E9E4;
   font-size: 0.8rem;
   width: 6vw;
   height: 7.5vh;
   padding: 5px;
-  border: 1px dotted #9d8189;
-  color: #9d8189;
+  border: 1px solid #C9ADA7;
+  color: #C9ADA7;
+  margin: 3px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.newin {
+  background-color: #22223B;
+  font-size: 0.8rem;
+  width: 6vw;
+  height: 7.5vh;
+  padding: 5px;
+  border: 1px solid #4A4E69;
+  color: white;
+  margin: 3px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.cardr {
+  background-color: #C9ADA7;
+  font-size: 0.8rem;
+  width: 6vw;
+  height: 7.5vh;
+  padding: 5px;
+  border: 1px solid #F2E9E4;
+  color: #4A4E69;
   margin: 3px;
   text-align: center;
   overflow: hidden;
@@ -21,7 +47,7 @@
 .container {
 
   display: inline-flex;
-  border: 1px solid #9d8189;
+  border: 1px dotted #9A8C98;
   list-style: none;
   padding: 1rem;
   margin: 0;
